package com.philips.platform.pim.rest;

import java.util.Map;

public class UserProfileRequest implements PimRestClientInterface {


    @Override
    public String getUrl() {
        return null;
    }

    @Override
    public Map<String, String> getHeader() {
        return null;
    }

    @Override
    public byte[] getBody() {
        return null;
    }

    @Override
    public int getMethodType() {
        return 0;
    }
}
